# advaita-smrti

./: .gitignore  CHANGELOG.md  CLAUDE.md  Daily_Data_Procedure.md  EMO_Oregon_Budget_Addendum-1.docx  EMO_Oregon_Hardware_and_Services_Quote.md  EMO_Oregon_Statement_of_Work-1.docx  Email_Draft_Pre_Meeting.md  LICENSE  Meeting_Notes_Hardware_Options.md  Notes_Consulting_Engagement_Patterns.md  Notes_Secure_Storage_and_Boot_Architecture.md  Phase1_Discovery_Questions.md  README.md  Recommended_System_A1.md  Windows_Platform_Options.md  email_draft_andrea_meeting.md  email_draft_cc_summary.md  export_docs.py  form_copilot.py  linkedin_post_draft.md  links.txt  mcp_server.py  pyproject.toml  questions_config.json  sea_application.db  sea_application_helper.py  sea_assistant.py  smrti.py  timecard.md  validate_config.py
.memory/: config.json  decisions.jsonl  index.db  tasks.jsonl
advaita-smrti/: .gitignore  config_schema.json  sea_application_helper.py  sea_assistant.py
bench/: README.md  antigravity_bench_task.md  coherence.lp  profile_flag_patch.py  regression.lp  run_claude.py  run_gemini.py  run_local.sh  score.py  scoring.lp
docs/: EXAMPLES.md  WORKFLOW.md
form-copilot/: CHANGELOG.md  CLAUDE.md  README.md  business_direction_analysis.md  config_schema.json  form_copilot.py  migrate_to_memory.py  sea_application_helper.py  seed_emo_memory.py  validate_config.py
memory/: __init__.py  models.py  storage.py  synthesis.py  tasks.py
smrti/: __init__.py  __main__.py  cli.py  mcp.py
tests/: __init__.py  run_tests.py  test_cli.py  test_coherence.py  test_facts.py  (+1 more)
(+87 files in other folders)
