[project]
name = "advaita-smrti"
version = "0.5.0"
description = "Non-dual memory for structured knowledge elicitation"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=1.0"]

[project.scripts]
smrti = "smrti.cli:main"
smrti-mcp = "smrti.mcp:main"

[project.urls]
Homepage = "https://github.com/aaronjohnson/advaita-smrti"
Repository = "https://github.com/aaronjohnson/advaita-smrti"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["smrti"]
